--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
         
-  - title: "Blog Posts"
+  - title: "Recruit Students"
     url: /year-archive/
     
   - title: "Guide"
