--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /teaching/    
         
   - title: "Recruit Students"
-    url: /year-archive/
+    url: /talks/
     
   - title: "Guide"
     url: /markdown/
