--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /publications/  
 
   - title: "竞赛奖项"
-    url: /teaching/    
+    url: /compete/    
         
   - title: "专利软著"
     url: /markdown/
