--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /compete/    
         
   - title: "专利软著"
-    url: /markdown/
+    url: /patent/
 
   - title: "科研项目"
     url: /markdown/
