--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,8 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://0-scholar-google-com.brum.beds.ac.uk/citations?hl=en&user=FNfBHg8AAAAJ"
-  impactstory      : 2009.12，哈尔滨工业大学，学士、硕士、博士
-  researchgate     : 2012.03，上海交通大学，博士后
-                     2012.04至今，中国科学院信息工程研究所，助理研究员、副研究员、硕士生导师、博士生导师、研究员
+  impactstory      : 
+  researchgate     : 
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
