--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://0-scholar-google-com.brum.beds.ac.uk/citations?hl=en&user=FNfBHg8AAAAJ"
+  DBLP             : "https://dblp.uni-trier.de/pid/36/2728-15.html"
   impactstory      : 
   researchgate     : 
 
