--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "周宇"
   pronouns         : # example: "she/her"  
-  bio              : "教授 博士生导师 InTime组负责人"
+  bio              : "正高 博士生导师 InTime组负责人"
   location         : ""
   employer         : ""
   uri              : # URL
-  email            : "zhouyu@iie.ac.cn" 
+  email            : "yzhouhit@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
