--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "周宇"
   pronouns         : # example: "she/her"  
-  bio              : "正高 博士生导师 InTime组负责人"
+  bio              : "正高 博导 InTime组负责人"
   location         : ""
   employer         : ""
   uri              : # URL
