--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://0-scholar-google-com.brum.beds.ac.uk/citations?hl=en&user=FNfBHg8AAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=FNfBHg8AAAAJ&hl=en"
 #  DBLP             : "https://dblp.uni-trier.de/pid/36/2728-15.html"
   impactstory      : 
   researchgate     : 
