--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "周宇"
   pronouns         : # example: "she/her"  
-  bio              : "正高 博导 InTime组负责人"
+  bio              : "教授 博导 InTime组负责人"
   location         : ""
-  employer         : ""
+  employer         : "南开大学计算机学院/网络空间安全学院"
   uri              : # URL
   email            : "yzhouhit@163.com" 
 
