--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "教授 博导 InTime组负责人"
   location         : ""
-  employer         : "南开大学计算机学院/网络空间安全学院"
+  employer         : "南开大学计算机学院/网安学院"
   uri              : # URL
   email            : "yzhouhit@163.com" 
 
