--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : ""
   employer         : "南开大学计算机学院/网安学院"
   uri              : # URL
-  email            : "yzhouhit@163.com" 
+  email            : "yzhou@nankai.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
