--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "周宇"
   pronouns         : # example: "she/her"  
-  bio              : "教授 博导 InTime组负责人"
+  bio              : "教授 博导 InTimeLab负责人"
 #  location         : ""
   employer         : "南开大学计算机/网安学院"
   uri              : # URL
