--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "教授 博导 InTimeLab负责人"
 #  location         : ""
-  employer         : "南开大学(Nankai University)计算机/密网学院"
+  employer         : "南开大学(Nankai University)"
   uri              : # URL
   email            : "yzhou@nankai.edu.cn" 
   
