--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-CN"
 title                    : "InTimeLab"
 title_separator          : "-"
 name                     : &name "周宇"
-description              : &description "InTime：INterpret Tongue In MEdia"
+description              : &description "InTime：INterpret Tongue In Media and Embodiment"
 url                      : https://intimelab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "intimeLab/intimelab.github.io"
